commented out loading spinner code

--- a/rotini.html
+++ b/rotini.html
@@ -10,7 +10,8 @@
 
     <canvas id="glCanvas" width="1880" height="1000"></canvas>
 
-    <svg id="loading-spinner" xmlns="http://www.w3.org/2000/svg" width="600" height="350" viewBox="0 0 600 320">
+    
+    <!-- <svg id="loading-spinner" xmlns="http://www.w3.org/2000/svg" width="600" height="350" viewBox="0 0 600 320">
       <defs>
 
         <linearGradient id="rb-1">
@@ -260,7 +261,7 @@
       <g class="gr5">
         <path d="M0.499,290.031 C40.204,290.031 60.144,0.500 100.562,0.500" class="cls-5"/>
       </g>
-    </svg>
+    </svg> -->
     
   </body>
 </html>
