--- a/mei-content/spinnerTest.html
+++ b/mei-content/spinnerTest.html
@@ -1,17 +1,13 @@
 <html>
   
   <head>
-    <title>Rotini</title>
+    <title>Rotini Spinner Test</title>
     <script type="text/javascript" src="rotini.js"></script>
     <script src="https://mdn.github.io/webgl-examples/tutorial/gl-matrix.js"></script>
   </head>
   
   <body>
-
-    <canvas id="glCanvas" width="1880" height="1000"></canvas>
-
-    
-    <!-- <svg id="loading-spinner" xmlns="http://www.w3.org/2000/svg" width="600" height="350" viewBox="0 0 600 320">
+  	<svg id="loading-spinner" xmlns="http://www.w3.org/2000/svg" width="600" height="350" viewBox="0 0 600 320">
       <defs>
 
         <linearGradient id="rb-1">
@@ -261,7 +257,7 @@
       <g class="gr5">
         <path d="M0.499,290.031 C40.204,290.031 60.144,0.500 100.562,0.500" class="cls-5"/>
       </g>
-    </svg> -->
+    </svg>
     
   </body>
 </html>
