--- a/mei-content/rotini.html
+++ b/mei-content/rotini.html
@@ -18,12 +18,24 @@
 		<div class="slidecontainer" id="resSlider">
 		  <input type="range" min="0.0" max="1.0" value=".75" step=".01" class="slider" id="resRange" oninput="oi_resolution()">
 		</div>
-		<a onclick="oc_resolution()">Resolution</a>
-
-		<a>Opacity</a>
-		<a>Customization</a>
-		<a>Spaghetti</a>
-		<a>$500,000</a>
+		<div id="palletescontainer">
+			<select id="palletes" onchange="oc_palletes()">
+			  <option value="candy">Candy</option>
+			  <option value="halloween">Halloween</option>
+			</select>
+		</div>
+		<div id="newpalletecontainer">
+			<form id="newpalletes" style="margin-bottom: 200px;">
+			  <input type="text" placeholder="Name" id="palName">
+			  <input type="text" placeholder="Hex Code 1" id="col1">
+			  <input type="text" placeholder="Hex Code 2" id="col2">
+			  <a class="submit" onclick="oc_newpalletecontainer()">Submit</a>
+			</form>
+		</div>
+		<a onclick="oc_showhideitem('resSlider')">Resolution</a>
+		<a onclick="oc_showhideitem('palletescontainer')">Palette</a>
+		<a onclick="oc_showhideitem('newpalletecontainer')">New Pallete</a>
+		<a>Sources</a>
 	</div>
 
     <canvas id="glCanvas" width="1280" height="720"></canvas>
